Fix overflowing screenshots

--- a/app/assets/stylesheets/content.css
+++ b/app/assets/stylesheets/content.css
@@ -236,6 +236,7 @@ hr {
   -moz-border-radius-bottomleft: 3px;
   border-bottom-right-radius: 3px;
   border-bottom-left-radius: 3px;
+  overflow-y: scroll;
 }
 .screenshots img {
   text-align: center;
